:sparkles: Cleanup heading and format list
test .last_modified_at

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,17 +6,12 @@ layout: default
 
   {{ content }}
 
-  <h1 class="page-heading">Latest</h1>
-  
+  <h1 class="page-heading">Latest News</h1>
+  {% assign date_format = site.sato.date_format | default: "%b %-d, %Y" %}
   <ul class="post-list">
     {% for post in site.posts %}
       <li>
-        {% assign date_format = site.sato.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
+        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a> — <span class="post-meta">{{ post.date | date: date_format }}- {{ post.last_modified_at }} // [{{ page.last_modified_at }}]</span>
       </li>
     {% endfor %}
   </ul>
