--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
   <ul class="post-list">
     {% for post in site.posts %}
       <li>
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a> — <span class="post-meta">{{ post.date | date: date_format }}- {{ post.last_modified_at }} // [{{ page.last_modified_at }}]</span>
+        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a> — <span class="post-meta">{{ post.date | date: date_format }}- <em>updated: {{ post.last_modified_at | date: date_format }}</em></span>
       </li>
     {% endfor %}
   </ul>
